# claude-scratch-work

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PITFALLS.md  README.md  ROADMAP.md  STATE.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
config/: regime_labels.yaml  settings.yaml
data/checkpoints/: asset_prices.meta.json  asset_prices.parquet  cluster_labels.meta.json  cluster_labels.parquet  features.meta.json  features.parquet  features_supervised.meta.json  features_supervised.parquet  macro_raw.meta.json  macro_raw.parquet  market_code_clustered.meta.json  market_code_clustered.parquet  market_code_grok.meta.json  market_code_grok.parquet  market_code_predicted.meta.json  market_code_predicted.parquet  pca_components.meta.json  pca_components.parquet
legacy/: 01_data_exploration.py  02_clustering.py  03_regime_analysis.py  asset_returns.py  clustering.py  config.py  data_ingestion.py  feature_engineering.py  pipeline.py  plotting.py  portfolio.py  regime_analysis.py  setup.py  step1_scrape_multpl_quarterly_data.ipynb  step2_pull_fred_api_quarterly_data.ipynb  step3_add_grok_suggested_labels.ipynb  step4_combine_datasets_infer_missing_calc_derivs.ipynb  step5_dimensional_reduction_and_clustering.ipynb  supervised.py  test_clustering.py  test_data_ingestion.py  test_feature_engineering.py  test_regime_analysis.py  unified_script.py
notebooks/: 01_ingestion.ipynb  02_features.ipynb  03_clustering.ipynb  04_regimes.ipynb  05_prediction.ipynb  06_assets.ipynb  07_pairplot.ipynb  08_raw_series.ipynb
pipelines/: 01_ingest.py  02_features.py  03_cluster.py  04_regime_label.py  05_predict.py  06_asset_returns.py  07_dashboard.py
scratch/: README.md
src/market_regime/: asset_returns.py  cluster_comparison.py  clustering.py  config.py  density.py  gmm.py  plotting.py  prediction.py  reporting.py  runtime.py  spectral.py  transforms.py
src/market_regime/assets/: returns.py
src/market_regime/clustering/: kmeans.py
src/market_regime/features/: transforms.py
src/market_regime/ingestion/: assets.py  fred.py  grok.py  multpl.py
src/market_regime/io/: checkpoints.py
src/market_regime/prediction/: classifier.py
src/market_regime/regime/: profiler.py
src/market_regime/reporting/: dashboard.py  portfolio.py
tests/unit/: test_checkpoints.py  test_clustering.py  test_gmm.py  test_returns.py  test_transforms.py
